# Glovo-Scraper

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/glovo/: functions.py  main.py  main_restructure.py  restructure_functions.py  set_env.py
tests/: test_combinations.py
