[metadata]
name = glovo
description = wot
author = 657
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    glovo
install_requires =
    aiofiles==23.1.0
    ajsonrpc==1.2.0
    anyio==3.6.2
    beautifulsoup4==4.12.2
    bottle==0.12.25
    certifi==2023.5.7
    charset-normalizer==3.1.0
    click==8.1.3
    colorama==0.4.6
    distlib==0.3.6
    dnspython==2.4.2
    docx==0.2.4
    filelock==3.12.0
    geographiclib==2.0
    geopy==2.3.0
    glovo-api-python==2.0.1
    greenlet==2.0.2
    h11==0.14.0
    idna==3.4
    lxml==4.9.2
    marshmallow==3.19.0
    numpy==1.25.1
    packaging==23.1
    pandas==2.0.3
    Pillow==9.5.0
    platformdirs==3.5.1
    platformio==6.1.7
    playwright==1.36.0
    pyee==9.0.4
    pyelftools==0.29
    pymongo==3.11.0
    pyserial==3.5
    python-dateutil==2.8.2
    python-pptx==0.6.21
    pytz==2023.3
    requests==2.31.0
    semantic-version==2.10.0
    six==1.16.0
    sniffio==1.3.0
    soupsieve==2.4.1
    starlette==0.26.1
    tabulate==0.9.0
    typing_extensions==4.7.1
    tzdata==2023.3
    urllib3==1.26.16
    uvicorn==0.22.0
    virtualenv==20.23.0
    wsproto==1.2.0
    XlsxWriter==3.1.0


python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
glovo = py.typed

[flake8]
max-line-length = 160